--- a/src/Components/Profile/Head.css
+++ b/src/Components/Profile/Head.css
@@ -1,15 +1,15 @@
-.Head{
+/* .Head{
     display: flex;
     justify-content: space-around;
     background-color: rgb(238, 231, 217);
     padding-top: 35px;
-}
+} */
 .Head-left{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.Head-right{
+/* .Head-right{
     font: bold 21px Quicksand, serif;
     padding-top: 15px;
-}
+} */
